<resources>
    <string name="app_name">Exam 7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_botnav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="matches">Matches</string>
    <string name="top_players">Top Players</string>
    <string name="viedos">Viedos</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="match_preview">Match Preview</string>
    <string name="gameweek_3">Gameweek 3</string>
    <string name="overview">Overview</string>
    <string name="statistic">Statistic</string>
    <string name="line_up">Line up</string>
    <string name="ball_possession">Ball Possession</string>
    <string name="_1st_half">1st Half</string>
</resources>