<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:textColor="@color/green_blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tvStadium"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStadium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@id/tvDate" />

    <ImageView
        android:id="@+id/ivStar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="26dp"
        android:src="@drawable/path_8"
        app:layout_constraintBottom_toBottomOf="@id/ivTeam1"
        app:layout_constraintEnd_toStartOf="@id/ivTeam1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivTeam1" />

    <ImageView
        android:id="@+id/ivTeam1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@id/ivStar1"
        app:layout_constraintTop_toBottomOf="@id/tvStadium" />

    <TextView
        android:id="@+id/tvTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/ivTeam1"
        app:layout_constraintStart_toStartOf="@id/ivTeam1"
        app:layout_constraintTop_toBottomOf="@id/ivTeam1" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/ivTeam1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivTeam1" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toEndOf="@id/tvScore"
        app:layout_constraintStart_toStartOf="@id/tvScore"
        app:layout_constraintTop_toBottomOf="@id/tvScore" />

    <ImageView
        android:id="@+id/ivTeam2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/ivStar2"
        app:layout_constraintTop_toBottomOf="@id/tvStadium" />

    <ImageView
        android:id="@+id/ivStar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:src="@drawable/path_8"
        app:layout_constraintBottom_toBottomOf="@id/ivTeam2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivTeam2" />

    <TextView
        android:id="@+id/tvTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/ivTeam2"
        app:layout_constraintStart_toStartOf="@id/ivTeam2"
        app:layout_constraintTop_toBottomOf="@id/ivTeam2" />

    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_block"
        android:orientation="horizontal"
        android:padding="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTeam1"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textColor="@color/green_blue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/statistic"
            android:textAlignment="center"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/line_up"
            android:textAlignment="center"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvBallPossession1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/gray_dark_text"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintStart_toStartOf="@id/progress"
        app:layout_constraintTop_toBottomOf="@id/llInfo" />

    <TextView
        android:id="@+id/tvBallPossession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ball_possession"
        android:textColor="@color/gray_dark_text"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintEnd_toStartOf="@id/tvBallPossession2"
        app:layout_constraintStart_toEndOf="@id/tvBallPossession1"
        app:layout_constraintTop_toBottomOf="@id/llInfo" />

    <TextView
        android:id="@+id/tvBallPossession2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textColor="@color/gray_dark_text"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintEnd_toEndOf="@id/progress"
        app:layout_constraintTop_toBottomOf="@id/llInfo" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/round_progress"
        app:indicatorColor="@color/progress_blue"
        app:layout_constraintEnd_toEndOf="@id/llInfo"
        app:layout_constraintStart_toStartOf="@id/llInfo"
        app:layout_constraintTop_toBottomOf="@id/llInfo"
        app:trackColor="@color/progress_pink" />

    <FrameLayout
        android:id="@+id/flHalf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@color/gray_bg"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        app:layout_constraintTop_toBottomOf="@id/progress">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/_1st_half"
            android:textColor="@color/gray_dark_text" />

        <TextView
            android:id="@+id/tvHalfScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="3:2"
            android:textColor="@color/gray_dark_text" />
    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>